discussion/kv_engine/168540/168540_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Collector-ify Warmup stats

To use one consistent stat style in warmup.cc

Change-Id: I0ff10caf5673cdef8190919f6a4fda7406b19663

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 14:54:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 14:56:51.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42712/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42712/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36196/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36196/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4384/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4441/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16401/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16401/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16692/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16692/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15545/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24813/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17486/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17486/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14739/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1933:14: error: out-of-line definition of "addStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addCommonStats(const StatCollector& collector) const;
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:243:25: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addStats(const StatCollector& c) const;
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14739/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14739/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13572/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13572/ )
----------------------------------------------------------------------------------------------------------------------
